@@ -1,4 +1,5 @@
 HEAD
+	+ Use ou=Users as baseDN in sogo.conf if openchange_disable_multiou=yes
 	+ Changed field names to use the same terminology on Exchange
 	  installations
 	+ Added the firstorg and firstou arguments also when provisioning the
